<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="normalText">Normal Mode</string>
    <string name="expertText">Expert Mode</string>
    <string name="aboutText">About</string>
    <string name="exitText">Exit</string>

    <string name="normal">normal_click</string>
    <string name="ultimate">ultimate_click</string>
    <string name="about">about_click</string>
    <string name="exit">exit_click</string>
    <string name="x_move">x Move</string>


    <string name="makeMove">makeMove</string>

    <string name="empty"> </string>
    <string name="footer">All right reserved  (c) 2018</string>
    <string name="aboutArticle">"Tic Tac Toe"
A completed game of Tic-tac-toe
Genre(s) 	Paper-and-pencil game
Players 	2
Setup time 	Minimal
Playing time 	~1 minute
Random chance 	None
Skill(s) required 	Strategy, tactics, observation
Synonym(s) 	Noughts and crosses Xs and Os

Tic-tac-toe (also known as noughts and crosses or Xs and Os) is a paper-and-pencil game for two players, X and O, who take turns marking the spaces in a 3×3 grid.
The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.

The following example game is won by the first player, X:
Game of Tic-tac-toe, won by X

Players soon discover that the best play from both parties leads to a draw</string>

    <string name="reset">Reset</string>

</resources>
