<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ttt5images"
    android:orientation="vertical"
    tools:context="com.user.tictactoe.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/normalMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:background="@color/button"
            android:onClick="@string/normal"
            android:text="@string/normalText" />

        <Button
            android:id="@+id/UltimateMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/normalMode"
            android:layout_below="@+id/normalMode"
            android:layout_marginTop="41dp"
            android:background="@color/button"
            android:onClick="@string/ultimate"
            android:text="@string/expertText" />

        <Button
            android:id="@+id/AboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/UltimateMode"
            android:layout_below="@+id/UltimateMode"
            android:layout_marginTop="42dp"
            android:background="@color/button"
            android:onClick="@string/about"
            android:text="@string/aboutText" />

        <Button
            android:id="@+id/Exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/AboutBtn"
            android:layout_below="@+id/AboutBtn"
            android:layout_marginTop="41dp"
            android:background="@color/button"
            android:onClick="@string/exit"
            android:text="@string/exitText" />

    </RelativeLayout>
</RelativeLayout>
